Fixed social footer buttons dark mode and added more recent shows

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ button, a {
     filter: none;
 }
 @media(prefers-color-scheme: dark) {
-    .icon {
+    .large_button .icon {
         filter: none;
     }
 }
